# mock_sample

./: .env.azure.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  設計書.md
api/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.sample.toml  docker-compose.local.yml  docker-compose.yml  indexed_files_dump.sql  pyproject.toml  requirements-dev.txt  requirements.txt  search_index_types_dump.sql
api/alembic/: env.py
api/src/: init.py  main.py  routers.py
api/src/config/: azure_config.py
api/src/controllers/: __init__.py  admin_controller.py  auth_controller.py  blob_storage_controller.py  chat_message_controller.py  chat_room_controller.py  core_controller.py
api/src/dependencies/: auth.py
api/src/evaluation/: evaluation_data.schema.json  example.py  methods.py  sample_1.json  sample_2.json  sample_3.json
api/src/internal/: indexer.py  searcher.py
api/src/job/: create_index.py  delete_blob.py  evaluation_command.py  index.py  index_blob.py  index_blob_refactor.py  rename.py
api/src/middleware/: attribute_middleware.py
api/src/models/: __init__.py  base.py  chat_room.py  file.py  index.py  message.py  request_models.py  user.py
api/src/repositories/: __init__.py  base_repository.py  chat_room_repository.py  file_repository.py  index_repository.py  message_repository.py  user_repository.py
api/src/schemas/: base.py  chat_room_schema.py  file_schema.py  index_schema.py  message_schema.py  user_schema.py
api/src/services/: azure_ad.py  azure_ai_doc_intel.py  azure_ai_search.py  azure_blob_storage.py  azure_openai.py  azure_openai_health.py  db.py  performance_monitor.py  production_azure_openai.py  streaming_optimizer.py
api/src/usecases/: admin_usecase.py  core_config_usecase.py  index_usecase.py  manage_chat_message_usecase.py  manage_chatroom_usecase.py  user_authentication_usecase.py
api/src/utils/: convert_doc_to_docx.py  convert_file_to_pdf.py  extract_markdown_text_from_file.py  logger.py
api/tests/: test_azure_openai_integration.py
azure_test/: Dockerfile  README.md  function_app.py  local.settings.json  requirements.txt
docs/: README.md
docs/deployment/: AZURE_APP_SERVICE.md  AZURE_MYSQL.md  FULL_DEPLOYMENT.md
docs/quickstart/: AZURE.md  LOCAL.md
func/: function_app.py
func/copy_blob/: function_app.py
func/maintenance-check/: function_app.py  requirements.txt
infrastructure/azure/: README.md  deploy-terraform.sh
scripts/: azure-mysql-config.env.example  azure-mysql-seed-data.sh  deploy.sh  health-check.sh  init.sql  logs.sh  recent-logs.sh  set-azure-env.sh
tests/: test_framework_design.py
tests/integration/: test_azure_services_integration.py
tests/performance/: test_load_benchmarks.py
web/: .dockerignore  .prettierignore  .prettierrc.json  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
web/app/: _app.tsx  global.css  index.tsx  layout.tsx  page.tsx
web/scripts/: updateCoreConfig.js
web/services/: apiService.ts  localStorageService.ts
web/types/: chat.ts
(+46 files in other folders)
